[package]
name = "dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandbox"
path = "src/lib.rs"
crate-type = ["cdylib"]
proc-macro = true

[dependencies.winapi]
version = "0.3.9"
features = [
    "impl-default",
    "minwindef",
    "winnt",
    "consoleapi"
]

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
lazy_static = "1.4"
once_cell = "1.17.0"
dynasmrt = "2.0.0"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
faithe = { git = "https://github.com/sy1ntexx/faithe" }
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread"] }
chrono = "0.4.23"
egui_backend = "0.2.0"
egui_window_glfw_passthrough = "0.2.1"
etk = { git = "https://github.com/kyleescobar/etk" }
